# theflixer

./: LICENSE  pyproject.toml
examples/: 01_search.py
theflixer/: Show.py  __init__.py
