[tool.poetry]
name = "theflixer"
version = "0.1.0"
description = "A small library for pulling stuff from theflixer.tv."
authors = ["BadPythonCoder <xsare435@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
regex = "^2023.10.3"
xmltodict = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
